querySelector() / querySelectorAll() should always throw a SyntaxError when failing to parse selector string https://bugs.webkit.org/show_bug.cgi?id=160906

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline several W3C tests now that more checks are passing.

* web-platform-tests/dom/nodes/Element-matches-expected.txt:
* web-platform-tests/dom/nodes/ParentNode-querySelector-All-expected.txt:
* web-platform-tests/dom/nodes/ParentNode-querySelector-All-xht-expected.txt:

Source/WebCore:

querySelector() / querySelectorAll() should always throw a SyntaxError
when failing to parse selector string:
- https://dom.spec.whatwg.org/#dom-parentnode-queryselector
- https://dom.spec.whatwg.org/#scope-match-a-selectors-string

In some cases, WebKit was throwing a NamespaceError instead.

No new tests, rebaselined existing tests.

* dom/SelectorQuery.cpp:
(WebCore::SelectorQueryCache::add):

LayoutTests:

Rebaseline several layout tests now that we throw a different exception type.

* fast/css/parsing-css-attribute-case-insensitive-value-1-expected.txt:
* fast/css/parsing-css-attribute-case-insensitive-value-2-expected.txt:
* fast/dom/SelectorAPI/not-supported-namespace-in-selector-expected.txt:


Canonical link: https://commits.webkit.org/179018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204522 268f45cc-cd09-0410-ab3c-d52691b4dbfc